--- a/src/styles.css
+++ b/src/styles.css
@@ -80,3 +80,11 @@
 header .topHeader .topNavbar > ul > li.active > a {
   color: #f8c534 !important;
 }
+
+#my-progress-bar .mat-progress-bar-buffer {
+  background-color: rgb(86, 86, 86) !important;
+}
+
+#my-progress-bar .mat-progress-bar-fill::after {
+  background-color: #f8c534 !important;
+}
