- provider added in admin module - role based login : allow provider role - demo to check provider lineup (create) page is only visible to provider role

--- a/src/app/user/components/header/user-header.component.html
+++ b/src/app/user/components/header/user-header.component.html
@@ -6,6 +6,9 @@
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 sidePad">
           <nav class="topNavbar">
             <ul class="pull-right">
+              <li routerLinkActive="active" *ngIf="role == 'provider'" [routerLinkActiveOptions]="{exact: false}">
+                <a routerLink="/provider-lineup">My Lineups</a>
+              </li>
               <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: false}">
                 <a routerLink="/lineup-optimizer">Lineup Optimizer</a>
               </li>
