--- a/src/app/admin/components/left-bar/left-bar.component.html
+++ b/src/app/admin/components/left-bar/left-bar.component.html
@@ -18,14 +18,16 @@
         </li> -->
       <li [routerLinkActive]="['active']" ><a [routerLink]="['/admin/members']" class="waves-effect waves-button"><span class="menu-icon glyphicon glyphicon-user"></span><p>Members</p></a>
       </li>
-      <li [routerLinkActive]="['active']"><a [routerLink]="['/admin/pages']" class="waves-effect waves-button"><span class="menu-icon glyphicon glyphicon-user"></span><p>CMS Pages</p></a>
+      <li [routerLinkActive]="['active']" ><a [routerLink]="['/admin/providers']" class="waves-effect waves-button"><span class="menu-icon glyphicon glyphicon-user"></span><p>Providers</p></a>
       </li>
+      <!--<li [routerLinkActive]="['active']"><a [routerLink]="['/admin/pages']" class="waves-effect waves-button"><span class="menu-icon glyphicon glyphicon-user"></span><p>CMS Pages</p></a>-->
+      <!--</li>-->
       <li [routerLinkActive]="['active']"><a [routerLink]="['/admin/plans']" class="waves-effect waves-button"><span class="menu-icon glyphicon glyphicon-user"></span><p>Plans</p></a>
       </li>
       <li [routerLinkActive]="['active']"><a [routerLink]="['/admin/coupons']" class="waves-effect waves-button"><span class="menu-icon glyphicon glyphicon-user"></span><p>Coupons</p></a>
       </li>
-      <li [routerLinkActive]="['active']"><a [routerLink]="['/admin/contests']" class="waves-effect waves-button"><span class="menu-icon glyphicon glyphicon-user"></span><p>Contests</p></a>
-      </li>
+      <!--<li [routerLinkActive]="['active']"><a [routerLink]="['/admin/contests']" class="waves-effect waves-button"><span class="menu-icon glyphicon glyphicon-user"></span><p>Contests</p></a>-->
+      <!--</li>-->
     </ul>
   </div><!-- Page Sidebar Inner -->
 </div><!-- Page Sidebar -->
