Lineup Optimizer Pagination added.

--- a/src/app/front/components/header/front-header.component.html
+++ b/src/app/front/components/header/front-header.component.html
@@ -64,7 +64,7 @@
                 <a routerLink="/news">Player News</a>
               </li>
               <li><a>Podcasts</a></li>
-              <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+              <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: false}">
                 <a routerLink="/lineups">Lineups</a>
               </li>
             </ul>
