--- a/src/app/front/components/daily-lineup/daily-lineup.component.html
+++ b/src/app/front/components/daily-lineup/daily-lineup.component.html
@@ -6,7 +6,7 @@
     <div class="row">
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 sidePad">
         <div class="lineupHedin">
-          <h1>Daily Lineups for June 19, 2017</h1>
+          <h1>Daily Lineups for {{todayDate | date:'dd MMM, yyyy'}}</h1>
         </div>
         <div class="dTabs">
           <!-- Nav tabs -->
